crates/mtr/tests/snapshots/tui_snapshots__ascii_80x24_rtt.snap
---
source: crates/mtr/tests/tui_snapshots.rs
expression: "render(&f, 80, 24)"
---
"mtr 0.1.0  ->  target.example (192.0.2.10)   ICMP/IPv4  i=1s  Snt 4     12:34:56"
"   #. Host                   Loss%   Snt   Last   Avg  Best  Wrst StDev   Recent"
"   1. 10.0.0.9               0.00%     4    0.9   0.7   0.5   0.9   0.2     .=.="
"          [MPLS: Lbl 100 TC 0 S 1 TTL 1]                                        "
"          gw.example                                                            "
"   2. ???                  100.00%     4    0.0   0.0   0.0   0.0   0.0     xxxx"
">  3. 192.0.2.10             0.00%     4    2.5   2.5   2.5   2.5   0.0     @@@@"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"+ Hop 3  192.0.2.10  AS64500  EXAMPLE-AS ------------ RTT | Addresses | Log ---+"
"|5 ms│                                                                         |"
"|    │                                                                         |"
"| 2.5│                                                                      •••|"
"|   0│                                                                         |"
"|    └─────────────────────────────────────────────────────────────────────────|"
"|  -6s                                                                      now|"
"|                                                                              |"
"+------------------------------------------------------------------------------+"
"q quit  ? help  p pause  Space resume  r reset  Enter pane  Tab tab             "
