crates/mtr/tests/snapshots/tui_snapshots__too_small_50x10.snap
---
source: crates/mtr/tests/tui_snapshots.rs
expression: "render(&f, 50, 10)"
---
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"  terminal too small: 60x12 minimum (now 50x10)   "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
