crates/mtr/tests/snapshots/tui_snapshots__unicode_120x19_no_pane.snap
---
source: crates/mtr/tests/tui_snapshots.rs
expression: "render(&f, 120, 19)"
---
"mtr 0.1.0  testhost (192.0.2.1)  →  target.example (192.0.2.10)   ICMP/IPv4  i=1s  Snt 4                        12:34:56"
"   #. Host                   Loss%   Snt   Last   Avg  Best  Wrst StDev                                           Recent"
"▶  1. 10.0.0.9               0.00%     4    0.9   0.7   0.5   0.9   0.2                                             ▁▄▁▄"
"          [MPLS: Lbl 100 TC 0 S 1 TTL 1]                                                                                "
"          gw.example                                                                                                    "
"   2. ???                  100.00%     4    0.0   0.0   0.0   0.0   0.0                                             ░░░░"
"   3. 192.0.2.10             0.00%     4    2.5   2.5   2.5   2.5   0.0                                             ████"
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"q quit  ? help  p pause  Space resume  r reset  Enter pane  Tab tab  ↑↓ select  d recent  n dns  z asn  e mpls          "
