crates/mtr/tests/snapshots/tui_snapshots__unicode_60x12_help.snap
---
source: crates/mtr/tests/tui_snapshots.rs
expression: "render(&f, 60, 12)"
---
"mtr-rs 0.1.0  →  target.example (192.0.2.10)   ICMP 12:34:56"
"  ╭ Keys ────────────────────────────────────────────────╮v "
"▶ │?|h     help                       q       quit       │2 "
"  │p       pause (SPACE to resume)    r       reset all  │  "
"  │counters                                              │  "
"  │n       toggle DNS on/off          z|y     toggle ASN │0 "
"  │info on/off                                           │0 "
"  │e       toggle MPLS on/off         d       toggle     │  "
"  │Recent column                                         │  "
"  │u|t     cycle ICMP/UDP/TCP                            │  "
"  ╰──────────────────────────────────────────────────────╯  "
"any key closes help                                         "
