crates/mtr/tests/snapshots/tui_snapshots__unicode_80x24_addresses.snap
---
source: crates/mtr/tests/tui_snapshots.rs
expression: "render(&f, 80, 24)"
---
"mtr 0.1.0  →  target.example (192.0.2.10)   ICMP/IPv4  i=1s  Snt 4      12:34:56"
"   #. Host                   Loss%   Snt   Last   Avg  Best  Wrst StDev   Recent"
"▶  1. 10.0.0.9               0.00%     4    0.9   0.7   0.5   0.9   0.2     ▁▄▁▄"
"          [MPLS: Lbl 100 TC 0 S 1 TTL 1]                                        "
"          gw.example                                                            "
"   2. ???                  100.00%     4    0.0   0.0   0.0   0.0   0.0     ░░░░"
"   3. 192.0.2.10             0.00%     4    2.5   2.5   2.5   2.5   0.0     ████"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭ Hop 1  10.0.0.9 ─────────────────────────────────── RTT │ Addresses │ Log ───╮"
"│IP                        Name             ASN       Count    Last  First seen│"
"│10.0.0.1                  gw.example       -             2     0.5  -5s       │"
"│10.0.0.9                  -                -             2     0.9  -5s       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"q quit  ? help  p pause  Space resume  r reset  Enter pane  Tab tab  ↑↓ select  "
