crates/mtr/tests/snapshots/tui_snapshots__unicode_80x24_help.snap
---
source: crates/mtr/tests/tui_snapshots.rs
expression: "render(&f, 80, 24)"
---
"mtr 0.1.0  →  target.example (192.0.2.10)   ICMP/IPv4  i=1s  Snt 4      12:34:56"
"   #. Host                   Loss%   Snt   Last   Avg  Best  Wrst StDev   Recent"
"▶  1. 10.0.0.9               0.00%     4    0.9   0.7   0.5   0.9   0.2     ▁▄▁▄"
"          [MPLS: Lbl 100 TC 0 S 1 TTL 1]                                        "
"    ╭ Keys ────────────────────────────────────────────────────────────────╮    "
"   2│?|h     help                       q       quit                       │░░░░"
"   3│p       pause (SPACE to resume)    r       reset all counters         │████"
"    │n       toggle DNS on/off          z|y     toggle ASN info on/off     │    "
"    │e       toggle MPLS on/off         d       toggle Recent column       │    "
"    │u|t     cycle ICMP/UDP/TCP                                            │    "
"    │o str   set the columns (default LS NABWV)                            │    "
"    │i <n>   interval in seconds        f <n>   first TTL                  │    "
"    │m <n>   max TTL                    s <n>   packet size (n<0: random)  │    "
"    │b <c>   bit pattern (-1: random)   Q <t>   TOS                        │    "
"╭ Ho│Up/Dn j/k  select hop              Enter   toggle detail pane         │───╮"
"│1 m│Tab     next detail tab            +/- PgUp/PgDn  scroll              │ ⡆⡆│"
"│   │Ctrl-L  redraw                                                        │⢰⢱⠁│"
"│ 0.│                                                                      │⠈⠈ │"
"│   │press any key to go back...                                           │   │"
"│   ╰──────────────────────────────────────────────────────────────────────╯───│"
"│  -6s                                                                      now│"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"any key closes help                                                             "
