crates/mtr/tests/snapshots/tui_snapshots__unicode_80x24_paused.snap
---
source: crates/mtr/tests/tui_snapshots.rs
expression: screen
---
"mtr-rs 0.1.0  →  target.example (192.0.2.10)   ICMP/IPv4  i=1s [PAUSED] 12:34:56"
"   #. Host                   Loss%   Snt   Last   Avg  Best  Wrst StDev   Recent"
"▶  1. 10.0.0.9               0.00%     4    0.9   0.7   0.5   0.9   0.2     ▁▄▁▄"
"          [MPLS: Lbl 100 TC 0 S 1 TTL 1]                                        "
"          gw.example                                                            "
"   2. ???                  100.00%     4    0.0   0.0   0.0   0.0   0.0         "
"   3. 192.0.2.10             0.00%     4    2.5   2.5   2.5   2.5   0.0     ████"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭ Hop 1  10.0.0.9 ─────────────────────────────────── RTT │ Addresses │ Log ───╮"
"│1 ms│                                                                       ⡆⡆│"
"│    │                                                                      ⢰⢱⠁│"
"│ 0.5│                                                                      ⠈⠈ │"
"│   0│                                                                         │"
"│    └─────────────────────────────────────────────────────────────────────────│"
"│-148s                                                                      now│"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"q quit  ? help  p pause  Space resume  r reset  n dns  z asn  e mpls  Enter pane"
